[metadata]
name = gps-tools
version = 0.1.0
description = Command line tools for converting GPS data between CSV and GPX formats.
long_description = file: README.md
long_description_content_type = text/markdown
author = Adam Thompson

[options]
packages = find:
python_requires = >=3.8

[options.packages.find]
include =
    gps_tools*

[options.entry_points]
console_scripts =
    csv2gpx = gps_tools.cli:csv2gpx_main
    gpx2csv = gps_tools.cli:gpx2csv_main
